# junk2

./: .gitignore  CMakeLists.txt  examples.cpp  exercise.cpp  gui.cpp  list_tags.cpp  list_tags.h  main.cpp  plctags.cpp  plctags.h  utility.cpp  utility.h
libplctag/: .clang-format  .gitignore  1.txt  BUILD.md  CMakeLists.txt
libplctag/.github/workflows/: ci.yml
libplctag/cmake_toolchains/: aarch64.cmake  alpine.cmake  android.cmake  apple.cmake  armv6.cmake  armv7hf.cmake  clang_or_gcc.cmake  cross_build.cmake  mingw.cmake  msvc.cmake  unix.cmake  windows.cmake
libplctag/src/contrib/cli/: cli.c  cli.h  uthash.h
libplctag/src/examples/: CMakeLists.txt
libplctag/src/examples/src/: CMakeLists.txt  async.c  async_stress.c  barcode_test.c  busy_test.c  compat_utils.c  compat_utils.h  data_dumper.c  list_tags_logix.c  list_tags_micro8x0.c  list_tags_omron_incomplete.c  multithread.c  multithread_cached_read.c  multithread_plc5.c  multithread_plc5_dhp.c  plc5.c  simple.c  simple_cpp.cpp  simple_dual.c  slc500.c  stress_api_lock.c  stress_rc_mem.c  stress_test.c  string_non_standard_udt.c  string_standard.c  tag_rw2.c  tag_rw_deprecated.c  test_alternate_tag_listing.c  test_array_notation.c  test_auto_sync.c  test_callback.c  test_callback_ex.c  test_callback_ex_logix.c  test_callback_ex_modbus.c  test_connection_group.c  test_emulator_performance.c  test_event.c  test_indexed_tags.c  test_modbus_multiple.c  test_raw_cip.c  (+13 more)
libplctag/src/libplctag/: CMakeLists.txt
libplctag/src/libplctag/lib/: init.c  init.h  lib.c  tag.h  version.c  version.h  version.h.in
libplctag/src/libplctag/protocols/ab/: ab.h  ab_common.c  ab_common.h  cip.c  cip.h  defs.h  eip_cip.c  eip_cip.h  eip_cip_special.c  eip_cip_special.h  eip_lgx_pccc.c  eip_lgx_pccc.h  eip_plc5_dhp.c  eip_plc5_dhp.h  eip_plc5_pccc.c  eip_plc5_pccc.h  eip_slc_dhp.c  eip_slc_dhp.h  eip_slc_pccc.c  eip_slc_pccc.h  error_codes.c  error_codes.h  pccc.c  pccc.h  session.c  session.h  tag.h
libplctag/src/libplctag/protocols/mb/: modbus.c  modbus.h
libplctag/src/libplctag/protocols/omron/: cip.c  cip.h  conn.c  conn.h  defs.h  omron.h  omron_common.c  omron_common.h  omron_raw_tag.c  omron_raw_tag.h  omron_standard_tag.c  omron_standard_tag.h  tag.h
libplctag/src/libplctag/protocols/system/: system.c  system.h  tag.h
libplctag/src/platform/posix/: platform.c  platform.h
libplctag/src/platform/windows/: platform.c  platform.h
libplctag/src/tests/: CMakeLists.txt  analyze_logs_enhanced.py  run_full_tests.sh  run_modbus_tests.sh  run_simulator_tests.sh  valgrind.supp
libplctag/src/tests/ab_server/src/: cip.c  cip.h  compat.h  cpf.c  cpf.h  eip.c  eip.h  main.c  memory.c  memory.h  mutex.c  mutex.h  pccc.c  pccc.h  plc.h  result.h  slice.h  socket.c  socket.h  tcp_server.c  tcp_server.h  thread.c  thread.h  utils.c  utils.h
libplctag/src/tests/hashtable/: test_hashtable.c
libplctag/src/tests/modbus_server/: CMakeLists.txt  config.c  config.h  logger.c  logger.h  modbus_protocol.c  modbus_protocol.h  modbus_server.c  register_storage.c  register_storage.h  simple_test.py  socket_utils.c  socket_utils.h  test_client.py
libplctag/src/utils/: atomic_utils.c  atomic_utils.h  attr.c  attr.h  byteorder.h  debug.c  debug.h  hash.c  hash.h  hashtable.c  hashtable.h  macros.h  random_utils.c  random_utils.h  rc.c  rc.h  vector.c  vector.h
libplctag/src/wrappers/go/examples/: toogle_bool.go
libplctag/src/wrappers/go/src/plctag/: plctag.go
libplctag/src/wrappers/java/: TagRW.java
libplctag/src/wrappers/java/libplctag/: Tag.java
libplctag/src/wrappers/python/plctag/: libplctag.py
